...
              onPressIn={() => pressIn(scaleLanguage)}
              onPressOut={() => pressOut(scaleLanguage)}
              activeOpacity={1}
            >
              <Animated.View style={[styles.languageToggle, { transform: [{ scale: scaleLanguage }] }]}>
                <Text style={styles.languageToggleText}>
                  {currentLanguage === 'en' ? 'عربي' : 'EN'}
                </Text>
              </Animated.View>
            </TouchableOpacity>
            <TouchableOpacity
              onPress={() => setIsAccountDrawerVisible(true)}
              onPressIn={() => pressIn(scaleProfile)}
...
